# ChemLib

./: Cargo.toml
src/: buffer.rs  main.rs
src/core/: atom.rs  mod.rs  parser_utils.rs
src/core/chem_expression/: mod.rs
src/core/element/: mod.rs
src/core/element_data/: elements.json  mod.rs
src/core/molecule/: mod.rs
src/core/molecule_data/: mod.rs
src/core/redox/: mod.rs  redox.txt
