[package]
name = "chem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
flate2 = "1.0.25"
lazy_static = "1.4.0"
nom = "7.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
smiles-parser = "0.4.1"
strum = "0.24.1"
strum_macros = "0.24.3"

[unstable]
build-std = ["core", "alloc"]

[profile.release]
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 1
lto = "thin"
debug = true
